argocd/apps/home-assistant.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-frontend-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - home-assistant.homelab.dobson.dev
    secretName: home-assistant-tls
  rules:
  - host: home-assistant.homelab.dobson.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant-home-assistant
            port:
              number: 8080
