argocd/apps/n8n.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-frontend-ingress
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - n8n.homelab.dobson.dev
    secretName: n8n-tls
  rules:
  - host: n8n.homelab.dobson.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-main
            port:
              number: 5678
